change version to 21